--- a/src/pages/cotizar/cotizar.html
+++ b/src/pages/cotizar/cotizar.html
@@ -54,9 +54,10 @@
 <ion-item>
 	<ion-label floating>Telefono</ion-label>
 	<ion-input 
-	type="text" 
+	type="number" 
 	formControlName="telefono" 
-	clearInput="true">
+	clearInput="true"
+	maxlength="10">
 </ion-input>
 </ion-item>
 
