--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -1,35 +1,177 @@
 <ion-header>
 
-  <ion-navbar color="primary">
-    <ion-title>Agregar Productos</ion-title>
-  </ion-navbar>
+	<ion-navbar color="primary" no-border-bottom>
+		<ion-title>Agregar Productos</ion-title>
+	</ion-navbar>
+
+	<ion-toolbar no-border-top>
+		<ion-segment [(ngModel)]="producto">
+			<ion-segment-button value="Mesas">
+				Mesas y Sillas
+			</ion-segment-button>
+			<ion-segment-button value="Juegos">
+				Juegos
+			</ion-segment-button>
+			<ion-segment-button value="Servicios">
+				Servicios
+			</ion-segment-button>
+		</ion-segment>
+	</ion-toolbar>
 
 </ion-header>
 
 
 <ion-content padding>
-<ion-card>
-	<ion-card-content>
-		<ion-grid>
-			<ion-row>
-				<ion-col>
-					<ion-label>Tablon Con 10 Sillas</ion-label>
-				</ion-col>
-				<ion-col>
-					<ion-label class="span">{{table}}</ion-label>
-				</ion-col>
-			</ion-row>
-			<ion-row>
-				<ion-col col-6>
-					<button ion-button block color="primary"(click)="addTable()">+</button>
-				</ion-col>
-				<ion-col col-6>
-					<button ion-button block color="danger" (click)="removeTable()">-</button>
-				</ion-col>
-			</ion-row>
-		</ion-grid>
-	</ion-card-content>
-</ion-card>
 
+	<div [ngSwitch]="producto">
+		<div *ngSwitchCase="'Mesas'">
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Tablon Con 10 Sillas</ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{tableTab}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addTableTab()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeTableTab()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Mesa Redonda 10 Sillas</ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{tableRound}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addTableRound()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeTableRound()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+			
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Mesa Cristal </ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{tableCrys}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addTableCrys()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeTableCrys()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+		</div>
+
+		<div *ngSwitchCase="'Juegos'">
+			
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Inflable Chico</ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{infCh}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addInfCh()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeInfCh()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Infable Grande</ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{infGd}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addInfGd()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeInfGd()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+							<ion-col>
+								<ion-label>Brincolin </ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{brincolin}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="addBrin()">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="removeBrin()">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+		</div>
+
+	</div>
+
+	<button ion-button block full icon-left color="secondary" (click)="cotizar()">
+		<ion-icon name="flash"></ion-icon>
+		Cotizar
+	</button>
 </ion-content>
 
