--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -12,7 +12,7 @@
 
 
 <ion-content padding>
-	<img src="/assets/imgs/logocover.jpg">
+	<img src="/assets/imgs/logocover.jpg" class="init">
 	<h1 class="titulo">Alquiladora Casa AR</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
