--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -22,26 +22,31 @@
 
 
 <ion-content padding>
-
+	<h3 class="titulo">Cotización Cliente: {{cliente.cliente}}</h3>
 	<div [ngSwitch]="producto">
 		<div *ngSwitchCase="'Mesas'">
 			<ion-card >
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+							<ion-thumbnail item-start>
+						      <img src="/assets/imgs/tablon.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
-								<ion-label>Tablon Con 10 Sillas</ion-label>
+								<ion-label>Tablon Con 10 Sillas</ion-label>			
 							</ion-col>
 							<ion-col>
 								<ion-label class="span">{{tableTab}}</ion-label>
 							</ion-col>
+
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addTableTab()">+</button>
+								<button ion-button block color="primary" [disabled]="tableTab == 50" (click)="add('tablon')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeTableTab()">-</button>
+								<button ion-button block color="danger" [disabled]="tableTab == 0" 
+								(click)="remove('tablon')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
@@ -52,6 +57,9 @@
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+							<ion-thumbnail item-start>
+						      <img src="/assets/imgs/redonda.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Mesa Redonda 10 Sillas</ion-label>
 							</ion-col>
@@ -61,10 +69,12 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addTableRound()">+</button>
+								<button ion-button block color="primary" [disabled]="tableRound == 25" 
+								(click)="add('redonda')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeTableRound()">-</button>
+								<button ion-button block color="danger" [disabled]="tableRound == 0" 
+								(click)="remove('redonda')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
@@ -75,6 +85,9 @@
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+							<ion-thumbnail item-start>
+						      <img src="/assets/imgs/cristal.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Mesa Cristal </ion-label>
 							</ion-col>
@@ -84,10 +97,14 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addTableCrys()">+</button>
+								<button ion-button block color="primary" 
+								[disabled]="tableCrys == 10"
+								(click)="add('cristal')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeTableCrys()">-</button>
+								<button ion-button block color="danger" 
+								[disabled]="tableCrys == 0"
+								(click)="remove('cristal')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
@@ -101,6 +118,9 @@
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+						<ion-thumbnail item-start>
+						      <img src="/assets/imgs/bCh.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Inflable Chico</ion-label>
 							</ion-col>
@@ -110,10 +130,10 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addInfCh()">+</button>
+								<button ion-button block color="primary" (click)="add('infCh')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeInfCh()">-</button>
+								<button ion-button block color="danger" [disabled]="infCh == 0" (click)="remove('infCh')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
@@ -124,6 +144,9 @@
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+						<ion-thumbnail item-start>
+						      <img src="/assets/imgs/bGd.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Infable Grande</ion-label>
 							</ion-col>
@@ -133,10 +156,11 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addInfGd()">+</button>
+								<button ion-button block color="primary"(click)="add('infGd')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeInfGd()">-</button>
+								<button ion-button block color="danger" [disabled]="infGd == 0" 
+								(click)="remove('infGd')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
@@ -147,6 +171,9 @@
 				<ion-card-content>
 					<ion-grid>
 						<ion-row>
+						<ion-thumbnail item-start>
+						      <img src="/assets/imgs/b.jpg" width="25px">
+						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Brincolin </ion-label>
 							</ion-col>
@@ -156,15 +183,74 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary"(click)="addBrin()">+</button>
+								<button ion-button block color="primary"(click)="add('brincolin')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" (click)="removeBrin()">-</button>
+								<button ion-button block color="danger" [disabled]="brincolin == 0"
+								 (click)="remove('brincolin')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
 				</ion-card-content>
 			</ion-card>
+		</div>
+
+
+		<div *ngSwitchCase="'Servicios'">
+			
+			<ion-card >
+				<ion-card-content>
+					<ion-grid>
+						<ion-row>
+						<ion-thumbnail item-start>
+						      <img src="/assets/imgs/mereso.jpg" width="25px">
+						    </ion-thumbnail>
+							<ion-col>
+								<ion-label>Mesero</ion-label>
+							</ion-col>
+							<ion-col>
+								<ion-label class="span">{{mesero}}</ion-label>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col col-6>
+								<button ion-button block color="primary"(click)="add('mesero')">+</button>
+							</ion-col>
+							<ion-col col-6>
+								<button ion-button block color="danger" (click)="remove('mesero')" [disabled]="mesero == 0">-</button>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</ion-card-content>
+			</ion-card>
+
+			<ion-card >
+				<ion-card-content>
+
+
+					<ion-thumbnail item-start>
+						<img src="/assets/imgs/carpa.jpeg" width="30px">
+					</ion-thumbnail>
+					<ion-list>
+						<ion-item>
+						  <ion-label> Agregar</ion-label>
+						  <ion-toggle [(ngModel)]="isToggled" (ionChange)="changeTog()"></ion-toggle>
+						</ion-item>
+						<ion-item>
+							<ion-label>Carpa</ion-label>
+							<ion-select [(ngModel)]="carpa" interface="popover" *ngIf="isToggled == true">
+								<ion-option value="50">50 Personas</ion-option>
+								<ion-option value="100">100 Personas</ion-option>
+								<ion-option value="150">150 Personas</ion-option>
+								<ion-option value="200">200 Personas</ion-option>
+							</ion-select>
+						</ion-item>
+					</ion-list>
+
+
+				</ion-card-content>
+			</ion-card>
+
 		</div>
 
 	</div>
