--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -110,6 +110,11 @@
 					</ion-grid>
 				</ion-card-content>
 			</ion-card>
+
+			<ion-card>
+				<ion-label>Observaciones</ion-label>
+				<ion-textarea [(ngModel)]="observaciones"></ion-textarea>
+			</ion-card>
 		</div>
 
 		<div *ngSwitchCase="'Juegos'">
