--- a/src/pages/detalle/detalle.html
+++ b/src/pages/detalle/detalle.html
@@ -2,8 +2,8 @@
 	<ion-navbar color="primary" no-border-bottom>
 			<ion-title>Detalle</ion-title>
 		</ion-navbar>
-	  <ion-navbar>
-  </ion-navbar>
+	  <!-- <ion-navbar>
+  </ion-navbar> -->
 
 </ion-header>
 
