--- a/src/pages/entregas/entregas.html
+++ b/src/pages/entregas/entregas.html
@@ -12,5 +12,28 @@
 
 
 <ion-content padding>
+  <ion-card>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.287788006578!2d-99.04334248566633!3d19.486250444013578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fae21a0524f3%3A0x77ecd7f430247986!2sValle+de+Salvin%2C+Valle+de+Aragon+2da+Secc%2C+57100+Nezahualc%C3%B3yotl%2C+M%C3%A9x.!5e0!3m2!1ses-419!2smx!4v1525362545789" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <ion-fab right top>
+    <button ion-fab>
+      <ion-icon name="pin"></ion-icon>
+    </button>
+  </ion-fab>
 
+  <ion-item>
+    <ion-icon name="planet" item-start large></ion-icon>
+    <h2>Cliente</h2>
+    <p>11 N. Way St, Madison, WI 53703</p>
+  </ion-item>
+
+  <ion-item>
+    <span item-left>18 min</span>
+    <span item-left>(2.6 mi)</span>
+    <button ion-button icon-left clear item-end>
+      <ion-icon name="navigate"></ion-icon>
+      Start
+    </button>
+  </ion-item>
+
+</ion-card>
 </ion-content>
