--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -12,25 +12,37 @@
 
 
 <ion-content padding>
+
 	<img src="/assets/imgs/logocover.jpg" class="init">
 	<h1 class="titulo">Alquiladora Casa AR</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-		<ion-grid>
-			<ion-row>
-				<button ion-button full icon-left color="danger">
-					<ion-icon name="logo-youtube"></ion-icon>
-					Youtube
-				</button>
+	<ion-list>
 
-				<button ion-button full icon-left color="primary">
-					<ion-icon name="logo-facebook"></ion-icon>
-					Facebook
-				</button>
-			</ion-row>
-		</ion-grid>
-	</ion-content>
+		<ion-item *ngFor="let v of views" (click)="goToPage(v.component)">
+			<ion-thumbnail item-start>
+				<img src="{{v.img}}">
+			</ion-thumbnail>
+			<h2>{{v.title}}</h2>
+			<p>Productos • Servicios</p>
+			<button ion-button clear item-end>View</button>
+		</ion-item>
+		<!-- <ion-item>
+			<ion-thumbnail item-start>
+				<img src="/assets/imgs/order.png">
+			</ion-thumbnail>
+			<h2>Pedidos</h2>
+			<p>Productos • Servicios</p>
+			<button ion-button clear item-end>View</button>
+		</ion-item>
+		<ion-item>
+			<ion-thumbnail item-start>
+				<img src="/assets/imgs/delivery-truck.png">
+			</ion-thumbnail>
+			<h2>Entregas</h2>
+			<p>Productos • Servicios</p>
+			<button ion-button clear item-end>View</button>
+		</ion-item> -->
+
+	</ion-list>
+
+
+</ion-content>
