--- a/src/pages/detalle-pedido/detalle-pedido.html
+++ b/src/pages/detalle-pedido/detalle-pedido.html
@@ -8,6 +8,13 @@
 
 
 <ion-content padding>
+  <ion-item>
+      <ion-avatar item-start>
+        <img src="/assets/imgs/batman.png">
+      </ion-avatar>
+      <h2>{{client.cliente}}</h2>
+      <h2>{{client.date}}</h2>
+    </ion-item>
 
   <ion-list *ngFor="let i of datos">
     <ion-item >
