--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -21,8 +21,8 @@
 </ion-header>
 
 
-<ion-content padding>
-	<h3 class="titulo">Cotización Cliente: {{cliente.cliente}}</h3>
+<ion-content>
+	<h3 text-center text-capitalize>Cotización Cliente: {{cliente.cliente}}</h3>
 	<div [ngSwitch]="producto">
 		<div *ngSwitchCase="'Mesas'">
 			<ion-card >
@@ -33,7 +33,7 @@
 						      <img src="/assets/imgs/tablon.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
-								<ion-label>Tablon Con 10 Sillas</ion-label>			
+								<ion-label>Tablon Con 10 Sillas</ion-label>
 							</ion-col>
 							<ion-col>
 								<ion-label class="span">{{tableTab}}</ion-label>
@@ -45,7 +45,7 @@
 								<button ion-button block color="primary" [disabled]="tableTab == 50" (click)="add('tablon')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" [disabled]="tableTab == 0" 
+								<button ion-button block color="danger" [disabled]="tableTab == 0"
 								(click)="remove('tablon')">-</button>
 							</ion-col>
 						</ion-row>
@@ -69,18 +69,18 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary" [disabled]="tableRound == 25" 
+								<button ion-button block color="primary" [disabled]="tableRound == 25"
 								(click)="add('redonda')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" [disabled]="tableRound == 0" 
+								<button ion-button block color="danger" [disabled]="tableRound == 0"
 								(click)="remove('redonda')">-</button>
 							</ion-col>
 						</ion-row>
 					</ion-grid>
 				</ion-card-content>
 			</ion-card>
-			
+
 			<ion-card >
 				<ion-card-content>
 					<ion-grid>
@@ -97,12 +97,12 @@
 						</ion-row>
 						<ion-row>
 							<ion-col col-6>
-								<button ion-button block color="primary" 
+								<button ion-button block color="primary"
 								[disabled]="tableCrys == 10"
 								(click)="add('cristal')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" 
+								<button ion-button block color="danger"
 								[disabled]="tableCrys == 0"
 								(click)="remove('cristal')">-</button>
 							</ion-col>
@@ -118,7 +118,7 @@
 		</div>
 
 		<div *ngSwitchCase="'Juegos'">
-			
+
 			<ion-card >
 				<ion-card-content>
 					<ion-grid>
@@ -164,7 +164,7 @@
 								<button ion-button block color="primary"(click)="add('infGd')">+</button>
 							</ion-col>
 							<ion-col col-6>
-								<button ion-button block color="danger" [disabled]="infGd == 0" 
+								<button ion-button block color="danger" [disabled]="infGd == 0"
 								(click)="remove('infGd')">-</button>
 							</ion-col>
 						</ion-row>
@@ -202,7 +202,7 @@
 
 
 		<div *ngSwitchCase="'Servicios'">
-			
+
 			<ion-card >
 				<ion-card-content>
 					<ion-grid>
@@ -265,4 +265,3 @@
 		Cotizar
 	</button>
 </ion-content>
-
