--- a/src/pages/detalle/detalle.html
+++ b/src/pages/detalle/detalle.html
@@ -1,5 +1,5 @@
 <ion-header>
-	<ion-navbar color="primary" no-border-bottom>
+	<ion-navbar color="them" no-border-bottom>
 			<ion-title>Detalle</ion-title>
 		</ion-navbar>
 	  <!-- <ion-navbar>
@@ -72,7 +72,7 @@
        </ion-col>
        <ion-col>
          <div>
-					 <button ion-button icon-left full large color="secundary">
+					 <button ion-button icon-left full large color="secundary" (click)="saveCotizacion(datos)">
 						 <ion-icon name="checkbox"></ion-icon>
 						 Guardar
 					 </button>
