--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-	<ion-navbar color="primary" no-border-bottom>
+	<ion-navbar color="them" no-border-bottom>
 		<ion-title>Agregar Productos</ion-title>
 	</ion-navbar>
 
