--- a/src/pages/cotizar/cotizar.html
+++ b/src/pages/cotizar/cotizar.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-	<ion-navbar color="primary">
+	<ion-navbar color="them">
 		<button ion-button menuToggle>
 			<ion-icon name="menu"> </ion-icon>
 		</button>
@@ -9,51 +9,53 @@
 
 </ion-header>
 
-<ion-content padding>
-	<h1>Cotizaciones</h1>
-	<form [formGroup]="cotiza" (ngSubmit)="sendCot()">
-		<ion-list>
+<ion-content>
+	<ion-card>
+		<ion-card-title class="title">Cotizaciones</ion-card-title>
+
+		<form [formGroup]="cotiza" (ngSubmit)="sendCot()">
+			<ion-list>
 
 				<ion-item>
-	      <ion-label>Fecha</ion-label>
-	      <ion-datetime displayFormat="DD MMM YYYY" formControlName="date" clearInput="true"></ion-datetime>
-	    </ion-item>
+					<ion-label>Fecha</ion-label>
+					<ion-datetime displayFormat="DD MMM YYYY" formControlName="date" clearInput="true"></ion-datetime>
+				</ion-item>
+
+				<ion-item>
+					<ion-label floating>Cliente</ion-label>
+					<ion-input
+					class="capitalize"
+					type="text"
+					formControlName="cliente"
+					clearInput="true">
+				</ion-input>
+			</ion-item>
 
 			<ion-item>
-				<ion-label floating>Cliente</ion-label>
+				<ion-label floating>Calle</ion-label>
 				<ion-input
-				class="capitalize"
 				type="text"
-				formControlName="cliente"
+				formControlName="calle"
 				clearInput="true">
 			</ion-input>
 		</ion-item>
 
 		<ion-item>
-			<ion-label floating>Calle</ion-label>
+			<ion-label floating>Numero Int/Ext</ion-label>
 			<ion-input
 			type="text"
-			formControlName="calle"
+			formControlName="numero"
 			clearInput="true">
 		</ion-input>
 	</ion-item>
 
 	<ion-item>
-		<ion-label floating>Numero Int/Ext</ion-label>
+		<ion-label floating>Colonia</ion-label>
 		<ion-input
 		type="text"
-		formControlName="numero"
+		formControlName="colonia"
 		clearInput="true">
 	</ion-input>
-</ion-item>
-
-<ion-item>
-	<ion-label floating>Colonia</ion-label>
-	<ion-input
-	type="text"
-	formControlName="colonia"
-	clearInput="true">
-</ion-input>
 </ion-item>
 
 <ion-item>
@@ -74,15 +76,16 @@
 	clearInput="true">
 </ion-input>
 </ion-item>
-
 </ion-list>
-
-<button
-type="submit"
-ion-button large block full icon-left
-[disabled]="!cotiza.valid" >
-<ion-icon name="send"></ion-icon>
-Enviar
+<ion-item>
+	<button
+	type="submit"
+	ion-button large block full icon-left
+	[disabled]="!cotiza.valid" >
+	<ion-icon name="send"></ion-icon>
+	Enviar
 </button>
+</ion-item>
 </form>
+</ion-card>
 </ion-content>
