--- a/src/pages/detalle-pedido/detalle-pedido.html
+++ b/src/pages/detalle-pedido/detalle-pedido.html
@@ -1,55 +1,64 @@
 <ion-header>
 
-  <ion-navbar color="primary" no-border-bottom>
+  <ion-navbar color="them" no-border-bottom>
     <ion-title>Detalle</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-item>
+<ion-content>
+  <ion-card>
+    <ion-item class="cardHeader">
       <ion-avatar item-start>
         <img src="/assets/imgs/batman.png">
       </ion-avatar>
       <h2>{{client.cliente}}</h2>
       <h2>{{client.date}}</h2>
     </ion-item>
+  </ion-card>
+  <ion-card>
 
-  <ion-list *ngFor="let i of datos">
-    <ion-item >
-      Tablon
-      <ion-badge item-end>{{i.tablon}}</ion-badge>
-    </ion-item>
-    <ion-item >
-      Mesa Redonda
-      <ion-badge item-end>{{i.redonda}}</ion-badge>
-    </ion-item>
-    <ion-item >
-      Mesa Cristal
-      <ion-badge item-end>{{i.cristal}}</ion-badge>
-    </ion-item>
-    <ion-item >
-      Inflable Chico
-      <ion-badge item-end>{{i.inflableChico}}</ion-badge>
-    </ion-item>
-    <ion-item >
-      Inflable Grande
-      <ion-badge item-end>{{i.inflableGrande}}</ion-badge>
-    </ion-item>
-    <ion-item >
-      Brincolin
-      <ion-badge item-end>{{i.brincolin}}</ion-badge>
-    </ion-item>
-    <ion-item>
-      Carpa
-      <ion-badge item-end>{{i.carpa}} Personas</ion-badge>
-    </ion-item>
-    <ion-item>
-      Meseros
-      <ion-badge item-end>{{i.meseros}} </ion-badge>
-    </ion-item>
+    <ion-list *ngFor="let i of datos">
+      <ion-item>
+        Tablon
+        <ion-badge item-end>{{i.tablon}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Mesa Redonda
+        <ion-badge item-end>{{i.redonda}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Mesa Cristal
+        <ion-badge item-end>{{i.cristal}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Inflable Chico
+        <ion-badge item-end>{{i.inflableChico}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Inflable Grande
+        <ion-badge item-end>{{i.inflableGrande}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Brincolin
+        <ion-badge item-end>{{i.brincolin}}</ion-badge>
+      </ion-item>
+      <ion-item>
+        Carpa
+        <ion-badge item-end>{{i.carpa}} Personas</ion-badge>
+      </ion-item>
+      <ion-item>
+        Meseros
+        <ion-badge item-end>{{i.meseros}} </ion-badge>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+<div padding>
+  <button ion-button icon-only full color="secondary" (click)="charge(client)">
+    <ion-icon name="nuclear"></ion-icon>
+  </button>
+</div>
 
-  </ion-list>
 
 </ion-content>
