--- a/src/pages/cotizar/cotizar.html
+++ b/src/pages/cotizar/cotizar.html
@@ -11,7 +11,7 @@
 
 <ion-content>
 	<ion-card>
-		<ion-card-title class="title">Cotizaciones</ion-card-title>
+		<ion-card-title class="title">Datos Pedido</ion-card-title>
 
 		<form [formGroup]="cotiza" (ngSubmit)="sendCot()">
 			<ion-list>
