--- a/src/pages/detalle-pedido/detalle-pedido.html
+++ b/src/pages/detalle-pedido/detalle-pedido.html
@@ -11,7 +11,7 @@
   <ion-card>
     <ion-item class="cardHeader">
       <ion-avatar item-start>
-        <img src="/assets/imgs/batman.png">
+        <img src="assets/imgs/batman.png">
       </ion-avatar>
       <h2>{{client.cliente}}</h2>
       <h2>{{client.date}}</h2>
