--- a/src/pages/detalle/detalle.html
+++ b/src/pages/detalle/detalle.html
@@ -13,7 +13,7 @@
 	<ion-card>
 		<ion-item>
 		    <ion-avatar item-start>
-		      <img src="/assets/imgs/batman.png">
+		      <img src="assets/imgs/batman.png">
 		    </ion-avatar>
 		    <h2>{{datos.datos.cliente}}</h2>
 		    <h2>{{datos.datos.date}}</h2>
