--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -13,7 +13,7 @@
 
 <ion-content>
 	<ion-card>
-	<img src="/assets/imgs/logocover.jpg" class="init">
+	<img src="assets/imgs/logocover.jpg" class="init">
 	<ion-card-title class="titulo">Alquiladora Casa AR</ion-card-title>
 </ion-card>
 
