--- a/src/pages/producto/producto.html
+++ b/src/pages/producto/producto.html
@@ -30,7 +30,7 @@
 					<ion-grid>
 						<ion-row>
 							<ion-thumbnail item-start>
-						      <img src="/assets/imgs/tablon.jpg" width="25px">
+						      <img src="assets/imgs/tablon.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Tablon Con 10 Sillas</ion-label>
@@ -58,7 +58,7 @@
 					<ion-grid>
 						<ion-row>
 							<ion-thumbnail item-start>
-						      <img src="/assets/imgs/redonda.jpg" width="25px">
+						      <img src="assets/imgs/redonda.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Mesa Redonda 10 Sillas</ion-label>
@@ -86,7 +86,7 @@
 					<ion-grid>
 						<ion-row>
 							<ion-thumbnail item-start>
-						      <img src="/assets/imgs/cristal.jpg" width="25px">
+						      <img src="assets/imgs/cristal.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Mesa Cristal </ion-label>
@@ -124,7 +124,7 @@
 					<ion-grid>
 						<ion-row>
 						<ion-thumbnail item-start>
-						      <img src="/assets/imgs/bCh.jpg" width="25px">
+						      <img src="assets/imgs/bCh.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Inflable Chico</ion-label>
@@ -150,7 +150,7 @@
 					<ion-grid>
 						<ion-row>
 						<ion-thumbnail item-start>
-						      <img src="/assets/imgs/bGd.jpg" width="25px">
+						      <img src="assets/imgs/bGd.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Infable Grande</ion-label>
@@ -177,7 +177,7 @@
 					<ion-grid>
 						<ion-row>
 						<ion-thumbnail item-start>
-						      <img src="/assets/imgs/b.jpg" width="25px">
+						      <img src="assets/imgs/b.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Brincolin </ion-label>
@@ -208,7 +208,7 @@
 					<ion-grid>
 						<ion-row>
 						<ion-thumbnail item-start>
-						      <img src="/assets/imgs/mereso.jpg" width="25px">
+						      <img src="assets/imgs/mereso.jpg" width="25px">
 						    </ion-thumbnail>
 							<ion-col>
 								<ion-label>Mesero</ion-label>
@@ -234,7 +234,7 @@
 
 
 					<ion-thumbnail item-start>
-						<img src="/assets/imgs/carpa.jpeg" width="30px">
+						<img src="assets/imgs/carpa.jpeg" width="30px">
 					</ion-thumbnail>
 					<ion-list>
 						<ion-item>
