--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
+  <!-- <script src="http://maps.google.com/maps/api/js?key=AIzaSyCGxGDEX2jZQ4kK8-01KO3B8nVE2UUN2zU"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGxGDEX2jZQ4kK8-01KO3B8nVE2UUN2zU&v=3.exp&libraries=places">
+</script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
